--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,10 @@
 .header {
-  color: blue;
-  
+  position: fixed;
+  width: 100vw;
+  height: 64px;
+  background: #333365;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
