--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,3 +1,11 @@
 .footer {
-  color: red;
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
+  height: 64px;
+  background: #b88018e2;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
