--- a/src/components/PageContainer/ContentContainer/ContentContainer.scss
+++ b/src/components/PageContainer/ContentContainer/ContentContainer.scss
@@ -1,6 +1,9 @@
 .contentContainer {
+  display: flex;
   margin-top: 200px;
   border: solid 1px black;
   height: 50px;
-  width: 200px;
+  width: 1240px;
+  justify-content: center;
+  align-items: center;
 }
