--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/GuitarHead.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/GuitarHead.scss
@@ -1,2 +1,5 @@
 .guitarHead {
+  width: 300px;
+  height: 300px;
+  background-image: url(../../../../../../assets/images/guitar/GuitarHead_Frame.svg);
 }
