added tuning posts

--- a/src/components/PageContainer/ContentContainer/ContentContainer.scss
+++ b/src/components/PageContainer/ContentContainer/ContentContainer.scss
@@ -3,7 +3,7 @@
   margin-top: 100px;
   border: solid 1px black;
   height: 600px;
-  width: 1240px;
-  justify-content: center;
+  width: 600px;
+  // justify-content: center;
   align-items: center;
 }
