--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningPosts/TuningPosts.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningPosts/TuningPosts.scss
@@ -1,2 +1,15 @@
 .tuningPosts {
+  display: flex;
+  height: 120px;
+  width: 92px;
+  justify-content: space-between;
+  position: relative;
+  top: 75px;
+  left: 101.5px;
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
