Added guitarframe, repositioned guitarhead components

--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningKeys/TuningKey/TuningKey.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningKeys/TuningKey/TuningKey.scss
@@ -1,7 +1,8 @@
 .tuningKey {
   width: 30.4px;
   height: 25.8px;
-  z-index: -1;
+  z-index: 1;
+  cursor: grab;
 
   &__left {
     background-image: url(~/src/assets/images/guitar/TuningKeyLeft.svg);
