--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningKeys/TuningKeys.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningKeys/TuningKeys.scss
@@ -3,7 +3,7 @@
   height: 126px;
   width: 163px;
   justify-content: space-between;
-  position: relative;
+  position: absolute;
   top: 72.4px;
   left: 65.8px;
 
