--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/GuitarHead.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/GuitarHead.scss
@@ -1,5 +1,8 @@
 .guitarHead {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 300px;
   height: 300px;
-  background-image: url(~/src/assets/images/guitar/GuitarHead_Frame.svg);
+  z-index: 10;
 }
