--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningPosts/TuningPosts.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarHead/TuningPosts/TuningPosts.scss
@@ -3,7 +3,7 @@
   height: 120px;
   width: 92px;
   justify-content: space-between;
-  position: relative;
+  position: absolute;
   top: 75px;
   left: 101.5px;
 
