--- a/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarNeck/GuitarNeck.scss
+++ b/src/components/PageContainer/ContentContainer/Interactive/Guitar/GuitarNeck/GuitarNeck.scss
@@ -1,4 +1,7 @@
 .guitarNeck {
+  position: absolute;
+  top: 300px;
+  left: 0px;
   width: 300px;
   height: 300px;
   background-image: url(~/src/assets/images/guitar/GuitarNeck_Frame.svg);
