--- a/src/components/PageContainer/ContentContainer/ContentContainer.scss
+++ b/src/components/PageContainer/ContentContainer/ContentContainer.scss
@@ -1,9 +1,9 @@
 .contentContainer {
   display: flex;
   margin-top: 100px;
-  border: solid 1px black;
   height: 600px;
-  width: 600px;
+  width: 100%;
   // justify-content: center;
   align-items: center;
+  justify-content: center;
 }
