Reorganized components, set up guitarhead stirngs

--- a/src/components/PageContainer/PageContainer.scss
+++ b/src/components/PageContainer/PageContainer.scss
@@ -1,6 +1,6 @@
 .pageContainer {
   padding: 64px 0;
-  max-width: 1368px;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   background: darkolivegreen;
 }
