Implemented options panel and reset button, clenaed up proptypes

--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/StringsPanelItem.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/StringsPanelItem.scss
@@ -1,2 +1,15 @@
 .stringsPanelItem {
+  display: flex;
+  gap: 20px;
+  text-align: start;
+
+  &__stringID {
+    width: 20px;
+  }
+  &__frequency {
+    width: 150px;
+  }
+  &__note {
+    width: 30px;
+  }
 }
