--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanel.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanel.scss
@@ -1,10 +1,10 @@
 .stringsPanel {
   margin: 5%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 300px;
   justify-content: space-around;
   list-style-type: none;
   margin: 0;
