--- a/src/components/GuitarContainer/Guitar/Guitar.scss
+++ b/src/components/GuitarContainer/Guitar/Guitar.scss
@@ -5,5 +5,5 @@
   border-right: solid 1px black;
   flex-direction: column;
   position: relative;
-  background: darkolivegreen;
+  background: linear-gradient(315deg, #b88018, transparent);
 }
