--- a/src/components/GuitarContainer/UserInterface/UserInterface.scss
+++ b/src/components/GuitarContainer/UserInterface/UserInterface.scss
@@ -4,4 +4,5 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: linear-gradient(135deg, #74afd4, #b8801891);
 }
