--- a/src/components/PageContainer/ContentContainer/ContentContainer.scss
+++ b/src/components/PageContainer/ContentContainer/ContentContainer.scss
@@ -1,6 +1,6 @@
 .contentContainer {
   display: flex;
-  margin-top: 100px;
+  padding-top: 100px;
   height: 600px;
   width: 100%;
   // justify-content: center;
