--- a/src/components/PageContainer/PageContainer.scss
+++ b/src/components/PageContainer/PageContainer.scss
@@ -1,6 +1,5 @@
 .pageContainer {
-  padding: 64px 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  background: darkolivegreen;
+  background: black;
 }
