Reordered tuning dropdown, added animation, removed footer

--- a/src/components/GuitarContainer/GuitarContainer.scss
+++ b/src/components/GuitarContainer/GuitarContainer.scss
@@ -3,4 +3,7 @@
   width: 600px;
   height: 600px;
   border: solid 1px black;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  overflow: hidden;
 }
