--- a/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdownItem/TuningDropdownItem.scss
+++ b/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdownItem/TuningDropdownItem.scss
@@ -1,6 +1,6 @@
 .tuningDropdownItem {
   display: block;
-  width: 100%;
+  min-width: 96px;
   border-radius: 5px;
   border: solid 2px transparent;
   color: skyblue;
