--- a/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TopOptionsPanel.scss
+++ b/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TopOptionsPanel.scss
@@ -1,6 +1,6 @@
-.optionsPanel {
+.topOptionsPanel {
   display: flex;
-  height: 50px;
+  height: 250px;
   justify-content: center;
   align-items: center;
 }
