--- a/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdown.scss
+++ b/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdown.scss
@@ -1,12 +1,13 @@
 .tuningDropdown {
   display: flex;
+  flex-flow: column wrap;
   height: auto;
-  flex-direction: column;
   align-items: center;
   background: linear-gradient(335deg, #8d6213, #302207);
   border: solid #3d2b09 3px;
-  transition: max-height 500ms ease 0ms;
+  transition: max-height 500ms cubic-bezier(0.77, -0.62, 0, 1) 0ms;
   overflow: hidden;
   padding: 2px 4px;
   border-radius: 10px;
+  white-space: nowrap;
 }
