--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanel.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanel.scss
@@ -3,10 +3,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  width: 270px;
   height: 300px;
   justify-content: space-around;
   list-style-type: none;
-  margin: 0;
+  margin: 0 15px;
   padding: 0;
 }
