--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteContainer.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteContainer.scss
@@ -2,7 +2,13 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  height: 29px;
+
+  color: paleturquoise;
+
   &__noteDropdown {
+    border-radius: 10px;
+    cursor: pointer;
     width: 20px;
   }
 }
