--- a/src/components/GuitarContainer/UserInterface/UserInterface.scss
+++ b/src/components/GuitarContainer/UserInterface/UserInterface.scss
@@ -1,6 +1,7 @@
 .userInterface {
   width: 300px;
-  height: 600px;
+  height: 580px;
+  padding: 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
