--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdown.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdown.scss
@@ -29,6 +29,13 @@
   }
 
   &__noteColumnItem {
+    &Current {
+      color: red;
+    }
+
+    &__selected {
+      color: gold;
+    }
   }
 
   &__octaveColumn {
@@ -39,5 +46,7 @@
   }
 
   &__octaveColumnItem {
+    &Current {
+    }
   }
 }
