Got note dropdown working to select notes

--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdownItem/NoteDropdownItem.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdownItem/NoteDropdownItem.scss
@@ -1,5 +1,13 @@
 .noteDropdownItem {
+  display: flex;
+  height: 18.4px;
+
+  sup {
+    position: relative;
+    top: -5px;
+  }
+
   &__current {
-    color: red;
+    color: goldenrod;
   }
 }
