--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdownItem/NoteDropdownItem.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdownItem/NoteDropdownItem.scss
@@ -2,6 +2,10 @@
   display: flex;
   height: 18.4px;
 
+  position: relative;
+  align-items: center;
+  justify-content: center;
+
   sup {
     position: relative;
     top: -5px;
@@ -9,5 +13,12 @@
 
   &__current {
     color: goldenrod;
+  }
+
+  &__border {
+    position: absolute;
+    border: solid black 1px;
+    height: 100%;
+    width: 100%;
   }
 }
