--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanel.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanel.scss
@@ -1,12 +1,11 @@
 .stringsPanel {
-  margin: 5%;
   display: flex;
   align-items: center;
   flex-direction: column;
   width: 270px;
-  height: 300px;
+  height: 290px;
   justify-content: space-around;
   list-style-type: none;
   margin: 0 15px;
-  padding: 0;
+  padding: 0 0 10px;
 }
