--- a/src/components/GuitarContainer/UserInterface/UserInterface.scss
+++ b/src/components/GuitarContainer/UserInterface/UserInterface.scss
@@ -1,7 +1,7 @@
 .userInterface {
   width: 300px;
-  height: 580px;
-  padding: 10px 0;
+  height: 590px;
+  padding: 10px 0 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
