Additionally styled stringLabel buttons

--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/StringLabel/StringLabel.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/StringLabel/StringLabel.scss
@@ -9,4 +9,10 @@
   background: black;
   color: white;
   cursor: pointer;
+
+  &:active {
+    color: black;
+    background: beige;
+    border-color: black;
+  }
 }
