Styled help toggle, added context, removed start button

--- a/src/components/GuitarContainer/UserInterface/OptionsPanel/OptionsPanel.scss
+++ b/src/components/GuitarContainer/UserInterface/OptionsPanel/OptionsPanel.scss
@@ -1,6 +1,8 @@
 .optionsPanel {
   display: flex;
-  height: 50px;
-  justify-content: center;
+  height: 48px;
+  margin: 0 14px;
+  justify-content: flex-end;
   align-items: center;
+  padding: 2px 2px 0 0;
 }
