--- a/src/components/GuitarContainer/UserInterface/OptionsPanel/HelpOverlayToggle/HelpOverlayToggle.scss
+++ b/src/components/GuitarContainer/UserInterface/OptionsPanel/HelpOverlayToggle/HelpOverlayToggle.scss
@@ -1,2 +1,18 @@
 .helpOverlayToggle {
+  height: 40px;
+  width: 40px;
+  background: #98670c;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  color: skyblue;
+
+  &__text {
+    font-size: 30px;
+  }
+
+  &__active {
+    background: #302207;
+    color: #708d92;
+    border-style: inset;
+  }
 }
