--- a/src/components/GuitarContainer/UserInterface/OptionsPanel/HelpOverlayToggle/HelpOverlayToggle.scss
+++ b/src/components/GuitarContainer/UserInterface/OptionsPanel/HelpOverlayToggle/HelpOverlayToggle.scss
@@ -5,6 +5,7 @@
   border-top-left-radius: 10px;
   border-bottom-right-radius: 10px;
   color: skyblue;
+  border-style: outset;
 
   &__text {
     font-size: 30px;
