Added outsideTrigger hook to tuningdropdown, restructured component

--- a/src/components/GuitarContainer/UserInterface/ResetPanel/ResetPanel.scss
+++ b/src/components/GuitarContainer/UserInterface/ResetPanel/ResetPanel.scss
@@ -3,9 +3,9 @@
   height: 50px;
   justify-content: center;
   align-items: center;
-  color: antiquewhite;
+  color: #fff8ef;
   background: black;
-  border: outset antiquewhite 5px;
+  border: outset #fff8ef 5px;
   font-family: cursive;
   font-size: 30px;
   letter-spacing: 4px;
