--- a/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdown.scss
+++ b/src/components/GuitarContainer/UserInterface/StringsPanel/StringsPanelItem/NoteContainer/NoteDropdown/NoteDropdown.scss
@@ -14,6 +14,7 @@
   position: relative;
   left: -30px;
   top: -30px;
+  z-index: 20;
 
   background: linear-gradient(335deg, #8d6213, #302207);
   border: solid #3d2b09 3px;
