--- a/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdown.scss
+++ b/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdown.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
 
-  &__dropdown {
+  &__container {
     height: 160px;
     display: flex;
     flex-flow: column wrap;
@@ -11,9 +11,8 @@
     border: solid #3d2b09 3px;
     transition: max-height 500ms cubic-bezier(0.4, -1, 0.54, -0.08) 0ms;
     overflow: hidden;
-    padding: 2px 4px;
+    padding: 0;
     border-radius: 10px;
-    white-space: nowrap;
     z-index: 10;
 
     &__active {
@@ -25,10 +24,22 @@
       max-height: 22px;
       justify-content: center;
     }
+
+    > div {
+      width: 100%;
+    }
+  }
+
+  &__dropdown {
+    height: 160px;
+    display: flex;
+    flex-flow: column wrap;
+    padding: 2px 4px;
+    border-radius: 10px;
   }
 
   &__text {
-    color: white;
+    color: #fff8ef;
     position: absolute;
     top: 25px;
     font-size: 34px;
