Tuning dropdown now indicates current tuning

--- a/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdownItem/TuningDropdownItem.scss
+++ b/src/components/GuitarContainer/UserInterface/TopOptionsPanel/TuningDropdown/TuningDropdownItem/TuningDropdownItem.scss
@@ -10,4 +10,8 @@
     background: linear-gradient(155deg, #8d6213, #302207);
     border-color: #714e0f;
   }
+
+  &__active {
+    color: goldenrod;
+  }
 }
